library/foundation/include/virgil/crypto/foundation/vscf_alg_info_der_deserializer.h

//  @generated
// --------------------------------------------------------------------------
// clang-format off
//  Generated section start.
// --------------------------------------------------------------------------

//
//  Handles implementation details.
//
typedef struct vscf_alg_info_der_deserializer_t vscf_alg_info_der_deserializer_t;
//
//  Cast to the 'vscf_impl_t' type.
//
VSCF_PUBLIC vscf_impl_t *
vscf_alg_info_der_deserializer_impl(vscf_alg_info_der_deserializer_t *self);
//
//  Copy given implementation context by increasing reference counter.
//
VSCF_PUBLIC vscf_alg_info_der_deserializer_t *
vscf_alg_info_der_deserializer_shallow_copy(vscf_alg_info_der_deserializer_t *self);
//
//  Deserialize algorithm from the data.
//
VSCF_PUBLIC vscf_impl_t *
vscf_alg_info_der_deserializer_deserialize(vscf_alg_info_der_deserializer_t *self, vsc_data_t data, vscf_error_t *error);