wrappers/python/virgil_crypto_lib/foundation/_c_bridge/_vscf_alg_info_der_deserializer.py


    def vscf_alg_info_der_deserializer_deserialize(self, ctx, data, error):
        """Deserialize algorithm from the data."""
        vscf_alg_info_der_deserializer_deserialize = self._lib.vscf_alg_info_der_deserializer_deserialize
        vscf_alg_info_der_deserializer_deserialize.argtypes = [POINTER(vscf_alg_info_der_deserializer_t), vsc_data_t, POINTER(vscf_error_t)]
        vscf_alg_info_der_deserializer_deserialize.restype = POINTER(vscf_impl_t)
        return vscf_alg_info_der_deserializer_deserialize(ctx, data, error)

    def vscf_alg_info_der_deserializer_shallow_copy(self, ctx):
        vscf_alg_info_der_deserializer_shallow_copy = self._lib.vscf_alg_info_der_deserializer_shallow_copy
        vscf_alg_info_der_deserializer_shallow_copy.argtypes = [POINTER(vscf_alg_info_der_deserializer_t)]
        vscf_alg_info_der_deserializer_shallow_copy.restype = POINTER(vscf_alg_info_der_deserializer_t)
        return vscf_alg_info_der_deserializer_shallow_copy(ctx)

    def vscf_alg_info_der_deserializer_impl(self, ctx):
        vscf_alg_info_der_deserializer_impl = self._lib.vscf_alg_info_der_deserializer_impl
        vscf_alg_info_der_deserializer_impl.argtypes = [POINTER(vscf_alg_info_der_deserializer_t)]
        vscf_alg_info_der_deserializer_impl.restype = POINTER(vscf_impl_t)
        return vscf_alg_info_der_deserializer_impl(ctx)
